removes deprecated constructor, replaces it with appropriate factory method